# src/Generated/Endpoint/GetTaskCollection.php
@@ -10,6 +10,7 @@ class GetTaskCollection extends \Datenkraft\Backbone\Client\ControlServerApi\Gen
      * @param array $queryParameters {
      *     @var string $filter[clientId] Task clientId filter
      *     @var string $filter[taskType] Task taskType filter
+     *     @var string $filter[notBefore] Task notBefore filter
      *     @var array $filter[taskStatus] Task taskStatus filter
      * }
      */
@@ -37,11 +38,12 @@ class GetTaskCollection extends \Datenkraft\Backbone\Client\ControlServerApi\Gen
     protected function getQueryOptionsResolver() : \Symfony\Component\OptionsResolver\OptionsResolver
     {
         $optionsResolver = parent::getQueryOptionsResolver();
-        $optionsResolver->setDefined(array('filter[clientId]', 'filter[taskType]', 'filter[taskStatus]'));
+        $optionsResolver->setDefined(array('filter[clientId]', 'filter[taskType]', 'filter[notBefore]', 'filter[taskStatus]'));
         $optionsResolver->setRequired(array());
         $optionsResolver->setDefaults(array());
         $optionsResolver->setAllowedTypes('filter[clientId]', array('string'));
         $optionsResolver->setAllowedTypes('filter[taskType]', array('string'));
+        $optionsResolver->setAllowedTypes('filter[notBefore]', array('string'));
         $optionsResolver->setAllowedTypes('filter[taskStatus]', array('array'));
         return $optionsResolver;
     }
